tdf#123421 : xlsx export : Don't write data field entry...

under colFields tag if there is only one data-field.

<colFields count=[*]>
    <field x="-2"/>  <--- -2 indicates data field.
</colFields>

Excel 2013/2016 seems to crash at the presence of '<field x="-2"/>'
in colFields when there is only one data-field.

Additionally, call GetOutputRangeByType(sheet::DataPilotOutputRangeType::TABLE)
on all ScDPObject's in non-const mode, so that the internal
pOuput member of ScDPObject is populated. Otherwise the
const GetOutputRangeByType(sheet::DataPilotOutputRangeType::TABLE)
call always return an invalid range.

This also adds 2 unit tests :-
1. To check the presence of <field x="-2"/> in colFields tag
   if there are more than one data-fields.
2. To ensure the absence of <field x="-2"/> in colFields tag
   if there is only one data-field.

Change-Id: I8f470bd1ab883f73586f04a3fcc30e3fbf948c4a
Reviewed-on: https://gerrit.libreoffice.org/70316
Tested-by: Jenkins
Reviewed-by: Andras Timar <andras.timar@collabora.com>
(cherry picked from commit 97af58093978d8e6b9d90eedcc59141304e7200e)
Reviewed-on: https://gerrit.libreoffice.org/70704
Reviewed-by: Dennis Francis <dennis.francis@collabora.com>